feat: Enhance case study notebook with additional examples and conditional operations

--- a/case.ipynb
+++ b/case.ipynb
@@ -13,13 +13,14 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-15T13:39:52.926297Z",
-     "start_time": "2025-07-15T13:39:52.667231Z"
+     "end_time": "2025-07-16T03:02:18.358715Z",
+     "start_time": "2025-07-16T03:02:18.193904Z"
     }
    },
    "cell_type": "code",
    "source": [
     "import pandas as pd\n",
+    "import numpy as np\n",
     "\n",
     "\n",
     "tips = pd.read_csv('data/tips.csv', delimiter=',')\n",
@@ -29,40 +30,256 @@
     "tips['new_bill'] = tips['total_bill'] / 2\n",
     "\n",
     "# Filter\n",
-    "tips = tips[tips['new_bill'] > 10]\n",
-    "is_dinner = tips['time'] == 'Dinner'\n",
-    "tips = tips[is_dinner]\n",
-    "print(tips['new_bill'].count())\n",
+    "# tips = tips[tips['new_bill'] > 10]\n",
+    "# is_dinner = tips['time'] == 'Dinner'\n",
+    "# tips = tips[is_dinner]\n",
+    "# print(tips['new_bill'].count())\n",
     "\n",
-    "print(tips)\n",
+    "# Conditional Column Creation / IF Statements in Spreadsheets e.g. IF(A1 < 10, \"low\", \"high\")\n",
+    "tips['bucket'] = np.where(tips['total_bill'] < 10, 'low', 'high')\n",
+    "filter_bucket = tips['bucket'] == 'high'\n",
+    "# tips = tips[filter_bucket]\n",
+    "\n",
+    "# Date Functions / Date and Time Functions in Spreadsheets\n",
+    "tips['date1'] = pd.Timestamp('2013-01-15')\n",
+    "tips['date2'] = pd.Timestamp('2015-02-15')\n",
+    "\n",
+    "tips\n",
     "\n",
     "\n"
    ],
    "id": "e423db6f47ed99f0",
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "176\n",
-      "     total_bill   tip     sex smoker   day    time  size  new_bill\n",
-      "0         14.99  1.01  Female     No   Sun  Dinner     2     7.495\n",
-      "1          8.34  1.66    Male     No   Sun  Dinner     3     4.170\n",
-      "2         19.01  3.50    Male     No   Sun  Dinner     3     9.505\n",
-      "3         21.68  3.31    Male     No   Sun  Dinner     2    10.840\n",
-      "4         22.59  3.61  Female     No   Sun  Dinner     4    11.295\n",
-      "..          ...   ...     ...    ...   ...     ...   ...       ...\n",
-      "239       27.03  5.92    Male     No   Sat  Dinner     3    13.515\n",
-      "240       25.18  2.00  Female    Yes   Sat  Dinner     2    12.590\n",
-      "241       20.67  2.00    Male    Yes   Sat  Dinner     2    10.335\n",
-      "242       15.82  1.75    Male     No   Sat  Dinner     2     7.910\n",
-      "243       16.78  3.00  Female     No  Thur  Dinner     2     8.390\n",
-      "\n",
-      "[176 rows x 8 columns]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "     total_bill   tip     sex smoker   day    time  size  new_bill bucket  \\\n",
+       "0         14.99  1.01  Female     No   Sun  Dinner     2     7.495   high   \n",
+       "1          8.34  1.66    Male     No   Sun  Dinner     3     4.170    low   \n",
+       "2         19.01  3.50    Male     No   Sun  Dinner     3     9.505   high   \n",
+       "3         21.68  3.31    Male     No   Sun  Dinner     2    10.840   high   \n",
+       "4         22.59  3.61  Female     No   Sun  Dinner     4    11.295   high   \n",
+       "..          ...   ...     ...    ...   ...     ...   ...       ...    ...   \n",
+       "239       27.03  5.92    Male     No   Sat  Dinner     3    13.515   high   \n",
+       "240       25.18  2.00  Female    Yes   Sat  Dinner     2    12.590   high   \n",
+       "241       20.67  2.00    Male    Yes   Sat  Dinner     2    10.335   high   \n",
+       "242       15.82  1.75    Male     No   Sat  Dinner     2     7.910   high   \n",
+       "243       16.78  3.00  Female     No  Thur  Dinner     2     8.390   high   \n",
+       "\n",
+       "         date1      date2  \n",
+       "0   2013-01-15 2015-02-15  \n",
+       "1   2013-01-15 2015-02-15  \n",
+       "2   2013-01-15 2015-02-15  \n",
+       "3   2013-01-15 2015-02-15  \n",
+       "4   2013-01-15 2015-02-15  \n",
+       "..         ...        ...  \n",
+       "239 2013-01-15 2015-02-15  \n",
+       "240 2013-01-15 2015-02-15  \n",
+       "241 2013-01-15 2015-02-15  \n",
+       "242 2013-01-15 2015-02-15  \n",
+       "243 2013-01-15 2015-02-15  \n",
+       "\n",
+       "[244 rows x 11 columns]"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>total_bill</th>\n",
+       "      <th>tip</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>smoker</th>\n",
+       "      <th>day</th>\n",
+       "      <th>time</th>\n",
+       "      <th>size</th>\n",
+       "      <th>new_bill</th>\n",
+       "      <th>bucket</th>\n",
+       "      <th>date1</th>\n",
+       "      <th>date2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>14.99</td>\n",
+       "      <td>1.01</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Sun</td>\n",
+       "      <td>Dinner</td>\n",
+       "      <td>2</td>\n",
+       "      <td>7.495</td>\n",
+       "      <td>high</td>\n",
+       "      <td>2013-01-15</td>\n",
+       "      <td>2015-02-15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>8.34</td>\n",
+       "      <td>1.66</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Sun</td>\n",
+       "      <td>Dinner</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4.170</td>\n",
+       "      <td>low</td>\n",
+       "      <td>2013-01-15</td>\n",
+       "      <td>2015-02-15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>19.01</td>\n",
+       "      <td>3.50</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Sun</td>\n",
+       "      <td>Dinner</td>\n",
+       "      <td>3</td>\n",
+       "      <td>9.505</td>\n",
+       "      <td>high</td>\n",
+       "      <td>2013-01-15</td>\n",
+       "      <td>2015-02-15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>21.68</td>\n",
+       "      <td>3.31</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Sun</td>\n",
+       "      <td>Dinner</td>\n",
+       "      <td>2</td>\n",
+       "      <td>10.840</td>\n",
+       "      <td>high</td>\n",
+       "      <td>2013-01-15</td>\n",
+       "      <td>2015-02-15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>22.59</td>\n",
+       "      <td>3.61</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Sun</td>\n",
+       "      <td>Dinner</td>\n",
+       "      <td>4</td>\n",
+       "      <td>11.295</td>\n",
+       "      <td>high</td>\n",
+       "      <td>2013-01-15</td>\n",
+       "      <td>2015-02-15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>239</th>\n",
+       "      <td>27.03</td>\n",
+       "      <td>5.92</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Sat</td>\n",
+       "      <td>Dinner</td>\n",
+       "      <td>3</td>\n",
+       "      <td>13.515</td>\n",
+       "      <td>high</td>\n",
+       "      <td>2013-01-15</td>\n",
+       "      <td>2015-02-15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>240</th>\n",
+       "      <td>25.18</td>\n",
+       "      <td>2.00</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Sat</td>\n",
+       "      <td>Dinner</td>\n",
+       "      <td>2</td>\n",
+       "      <td>12.590</td>\n",
+       "      <td>high</td>\n",
+       "      <td>2013-01-15</td>\n",
+       "      <td>2015-02-15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>241</th>\n",
+       "      <td>20.67</td>\n",
+       "      <td>2.00</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Sat</td>\n",
+       "      <td>Dinner</td>\n",
+       "      <td>2</td>\n",
+       "      <td>10.335</td>\n",
+       "      <td>high</td>\n",
+       "      <td>2013-01-15</td>\n",
+       "      <td>2015-02-15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>242</th>\n",
+       "      <td>15.82</td>\n",
+       "      <td>1.75</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Sat</td>\n",
+       "      <td>Dinner</td>\n",
+       "      <td>2</td>\n",
+       "      <td>7.910</td>\n",
+       "      <td>high</td>\n",
+       "      <td>2013-01-15</td>\n",
+       "      <td>2015-02-15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>243</th>\n",
+       "      <td>16.78</td>\n",
+       "      <td>3.00</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Thur</td>\n",
+       "      <td>Dinner</td>\n",
+       "      <td>2</td>\n",
+       "      <td>8.390</td>\n",
+       "      <td>high</td>\n",
+       "      <td>2013-01-15</td>\n",
+       "      <td>2015-02-15</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>244 rows × 11 columns</p>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "execution_count": 103
+   "execution_count": 120
   }
  ],
  "metadata": {
