feat: Update case study notebook with additional date functions and examples

--- a/case.ipynb
+++ b/case.ipynb
@@ -13,8 +13,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-16T03:02:18.358715Z",
-     "start_time": "2025-07-16T03:02:18.193904Z"
+     "end_time": "2025-07-16T03:58:24.775632Z",
+     "start_time": "2025-07-16T03:58:23.703329Z"
     }
    },
    "cell_type": "code",
@@ -43,6 +43,10 @@
     "# Date Functions / Date and Time Functions in Spreadsheets\n",
     "tips['date1'] = pd.Timestamp('2013-01-15')\n",
     "tips['date2'] = pd.Timestamp('2015-02-15')\n",
+    "tips['date1_year'] = tips['date1'].dt.year\n",
+    "tips['date2_month'] = tips['date2'].dt.month\n",
+    "tips['date1_next'] = tips['date1'] + pd.offsets.MonthBegin()\n",
+    "tips['months_between'] = tips['date2'].dt.to_period('M') - tips['date1'].dt.to_period('M')\n",
     "\n",
     "tips\n",
     "\n",
@@ -66,20 +70,33 @@
        "242       15.82  1.75    Male     No   Sat  Dinner     2     7.910   high   \n",
        "243       16.78  3.00  Female     No  Thur  Dinner     2     8.390   high   \n",
        "\n",
-       "         date1      date2  \n",
-       "0   2013-01-15 2015-02-15  \n",
-       "1   2013-01-15 2015-02-15  \n",
-       "2   2013-01-15 2015-02-15  \n",
-       "3   2013-01-15 2015-02-15  \n",
-       "4   2013-01-15 2015-02-15  \n",
-       "..         ...        ...  \n",
-       "239 2013-01-15 2015-02-15  \n",
-       "240 2013-01-15 2015-02-15  \n",
-       "241 2013-01-15 2015-02-15  \n",
-       "242 2013-01-15 2015-02-15  \n",
-       "243 2013-01-15 2015-02-15  \n",
+       "         date1      date2  date1_year  date2_month date1_next  \\\n",
+       "0   2013-01-15 2015-02-15        2013            2 2013-02-01   \n",
+       "1   2013-01-15 2015-02-15        2013            2 2013-02-01   \n",
+       "2   2013-01-15 2015-02-15        2013            2 2013-02-01   \n",
+       "3   2013-01-15 2015-02-15        2013            2 2013-02-01   \n",
+       "4   2013-01-15 2015-02-15        2013            2 2013-02-01   \n",
+       "..         ...        ...         ...          ...        ...   \n",
+       "239 2013-01-15 2015-02-15        2013            2 2013-02-01   \n",
+       "240 2013-01-15 2015-02-15        2013            2 2013-02-01   \n",
+       "241 2013-01-15 2015-02-15        2013            2 2013-02-01   \n",
+       "242 2013-01-15 2015-02-15        2013            2 2013-02-01   \n",
+       "243 2013-01-15 2015-02-15        2013            2 2013-02-01   \n",
        "\n",
-       "[244 rows x 11 columns]"
+       "       months_between  \n",
+       "0    <25 * MonthEnds>  \n",
+       "1    <25 * MonthEnds>  \n",
+       "2    <25 * MonthEnds>  \n",
+       "3    <25 * MonthEnds>  \n",
+       "4    <25 * MonthEnds>  \n",
+       "..                ...  \n",
+       "239  <25 * MonthEnds>  \n",
+       "240  <25 * MonthEnds>  \n",
+       "241  <25 * MonthEnds>  \n",
+       "242  <25 * MonthEnds>  \n",
+       "243  <25 * MonthEnds>  \n",
+       "\n",
+       "[244 rows x 15 columns]"
       ],
       "text/html": [
        "<div>\n",
@@ -111,6 +128,10 @@
        "      <th>bucket</th>\n",
        "      <th>date1</th>\n",
        "      <th>date2</th>\n",
+       "      <th>date1_year</th>\n",
+       "      <th>date2_month</th>\n",
+       "      <th>date1_next</th>\n",
+       "      <th>months_between</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -127,6 +148,10 @@
        "      <td>high</td>\n",
        "      <td>2013-01-15</td>\n",
        "      <td>2015-02-15</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2013-02-01</td>\n",
+       "      <td>&lt;25 * MonthEnds&gt;</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -141,6 +166,10 @@
        "      <td>low</td>\n",
        "      <td>2013-01-15</td>\n",
        "      <td>2015-02-15</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2013-02-01</td>\n",
+       "      <td>&lt;25 * MonthEnds&gt;</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -155,6 +184,10 @@
        "      <td>high</td>\n",
        "      <td>2013-01-15</td>\n",
        "      <td>2015-02-15</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2013-02-01</td>\n",
+       "      <td>&lt;25 * MonthEnds&gt;</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -169,6 +202,10 @@
        "      <td>high</td>\n",
        "      <td>2013-01-15</td>\n",
        "      <td>2015-02-15</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2013-02-01</td>\n",
+       "      <td>&lt;25 * MonthEnds&gt;</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -183,9 +220,17 @@
        "      <td>high</td>\n",
        "      <td>2013-01-15</td>\n",
        "      <td>2015-02-15</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2013-02-01</td>\n",
+       "      <td>&lt;25 * MonthEnds&gt;</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -211,6 +256,10 @@
        "      <td>high</td>\n",
        "      <td>2013-01-15</td>\n",
        "      <td>2015-02-15</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2013-02-01</td>\n",
+       "      <td>&lt;25 * MonthEnds&gt;</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>240</th>\n",
@@ -225,6 +274,10 @@
        "      <td>high</td>\n",
        "      <td>2013-01-15</td>\n",
        "      <td>2015-02-15</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2013-02-01</td>\n",
+       "      <td>&lt;25 * MonthEnds&gt;</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>241</th>\n",
@@ -239,6 +292,10 @@
        "      <td>high</td>\n",
        "      <td>2013-01-15</td>\n",
        "      <td>2015-02-15</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2013-02-01</td>\n",
+       "      <td>&lt;25 * MonthEnds&gt;</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>242</th>\n",
@@ -253,6 +310,10 @@
        "      <td>high</td>\n",
        "      <td>2013-01-15</td>\n",
        "      <td>2015-02-15</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2013-02-01</td>\n",
+       "      <td>&lt;25 * MonthEnds&gt;</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>243</th>\n",
@@ -267,19 +328,23 @@
        "      <td>high</td>\n",
        "      <td>2013-01-15</td>\n",
        "      <td>2015-02-15</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2013-02-01</td>\n",
+       "      <td>&lt;25 * MonthEnds&gt;</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>244 rows × 11 columns</p>\n",
+       "<p>244 rows × 15 columns</p>\n",
        "</div>"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 120
+   "execution_count": 124
   }
  ],
  "metadata": {
