feat: Update comparison notebook with additional examples for string manipulation and text extraction

--- a/comparison.ipynb
+++ b/comparison.ipynb
@@ -13,8 +13,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-16T10:20:56.079189Z",
-     "start_time": "2025-07-16T10:20:56.041839Z"
+     "end_time": "2025-07-16T12:35:08.346579Z",
+     "start_time": "2025-07-16T12:35:08.210693Z"
     }
    },
    "cell_type": "code",
@@ -43,10 +43,10 @@
     "# Date Functions / Date and Time Functions in Spreadsheets\n",
     "tips['date1'] = pd.Timestamp('2013-01-15')\n",
     "tips['date2'] = pd.Timestamp('2015-02-15')\n",
-    "tips['date1_year'] = tips['date1'].dt.year\n",
-    "tips['date2_month'] = tips['date2'].dt.month\n",
-    "tips['date1_next'] = tips['date1'] + pd.offsets.MonthBegin()\n",
-    "tips['months_between'] = tips['date2'].dt.to_period('M') - tips['date1'].dt.to_period('M')\n",
+    "tips['date1_year'] = tips['date1'].dt.year  # Extract year from date / YEAR(K2) in Spreadsheets\n",
+    "tips['date2_month'] = tips['date2'].dt.month # Extract month from date / MONTH(K2) in Spreadsheets\n",
+    "tips['date1_next'] = tips['date1'] + pd.offsets.MonthBegin() # Add one month to date / =DATE(YEAR(K2);MONTH(K2)+1;1) Spreadsheets\n",
+    "tips['months_between'] = tips['date2'].dt.to_period('M') - tips['date1'].dt.to_period('M') # Difference in months between two dates / DATEDIF(K2;L2;\"M\") in Spreadsheets\n",
     "\n",
     "# Selecting Columns / Selecting Cells in Spreadsheets\n",
     "# tips[['total_bill', 'tip']]  # Select multiple columns\n",
@@ -56,36 +56,164 @@
     "# tips = tips.sort_values(['sex'], ascending=True)  # Sort by a column\n",
     "\n",
     "# print(tips['time'].str.len())  # String length of column\n",
-    "tips['sex'].str.find('ale') # String search / FIND() in Spreadsheets\n",
-    "# print(tips)\n",
+    "tips['FIND()'] = tips['sex'].str.find('ale') # String search / FIND('ale';C2) in Spreadsheets\n",
+    "tips['MID()'] = tips['sex'].str[0:1] # String slicing / MID(C2;1;1) in Spreadsheets\n",
+    "print(tips)\n",
     "\n",
     "\n"
    ],
    "id": "e423db6f47ed99f0",
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     total_bill   tip     sex smoker   day    time  size  new_bill bucket  \\\n",
+      "0         14.99  1.01  Female     No   Sun  Dinner     2     7.495   high   \n",
+      "1          8.34  1.66    Male     No   Sun  Dinner     3     4.170    low   \n",
+      "2         19.01  3.50    Male     No   Sun  Dinner     3     9.505   high   \n",
+      "3         21.68  3.31    Male     No   Sun  Dinner     2    10.840   high   \n",
+      "4         22.59  3.61  Female     No   Sun  Dinner     4    11.295   high   \n",
+      "..          ...   ...     ...    ...   ...     ...   ...       ...    ...   \n",
+      "239       27.03  5.92    Male     No   Sat  Dinner     3    13.515   high   \n",
+      "240       25.18  2.00  Female    Yes   Sat  Dinner     2    12.590   high   \n",
+      "241       20.67  2.00    Male    Yes   Sat  Dinner     2    10.335   high   \n",
+      "242       15.82  1.75    Male     No   Sat  Dinner     2     7.910   high   \n",
+      "243       16.78  3.00  Female     No  Thur  Dinner     2     8.390   high   \n",
+      "\n",
+      "         date1      date2  date1_year  date2_month date1_next  \\\n",
+      "0   2013-01-15 2015-02-15        2013            2 2013-02-01   \n",
+      "1   2013-01-15 2015-02-15        2013            2 2013-02-01   \n",
+      "2   2013-01-15 2015-02-15        2013            2 2013-02-01   \n",
+      "3   2013-01-15 2015-02-15        2013            2 2013-02-01   \n",
+      "4   2013-01-15 2015-02-15        2013            2 2013-02-01   \n",
+      "..         ...        ...         ...          ...        ...   \n",
+      "239 2013-01-15 2015-02-15        2013            2 2013-02-01   \n",
+      "240 2013-01-15 2015-02-15        2013            2 2013-02-01   \n",
+      "241 2013-01-15 2015-02-15        2013            2 2013-02-01   \n",
+      "242 2013-01-15 2015-02-15        2013            2 2013-02-01   \n",
+      "243 2013-01-15 2015-02-15        2013            2 2013-02-01   \n",
+      "\n",
+      "       months_between  FIND() MID()  \n",
+      "0    <25 * MonthEnds>       3     F  \n",
+      "1    <25 * MonthEnds>       1     M  \n",
+      "2    <25 * MonthEnds>       1     M  \n",
+      "3    <25 * MonthEnds>       1     M  \n",
+      "4    <25 * MonthEnds>       3     F  \n",
+      "..                ...     ...   ...  \n",
+      "239  <25 * MonthEnds>       1     M  \n",
+      "240  <25 * MonthEnds>       3     F  \n",
+      "241  <25 * MonthEnds>       1     M  \n",
+      "242  <25 * MonthEnds>       1     M  \n",
+      "243  <25 * MonthEnds>       3     F  \n",
+      "\n",
+      "[244 rows x 17 columns]\n"
+     ]
+    }
+   ],
+   "execution_count": 20
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "# Extracting nth word\n",
+    "In Excel, you might use the [Text to Columns Wizard](https://support.microsoft.com/en-us/office/split-text-into-different-columns-with-the-convert-text-to-columns-wizard-30b14928-5550-41f5-97ca-7a3e9c363ed7) for splitting text and retrieving a specific column. (Note it’s possible to do so through a formula as well.)\n",
+    "\n",
+    "The simplest way to extract words in pandas is to split the strings by spaces, then reference the word by index. Note there are more powerful approaches should you need them."
+   ],
+   "id": "1b675c9ed48a593a"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-07-16T13:18:48.837435Z",
+     "start_time": "2025-07-16T13:18:48.797977Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "df = pd.DataFrame({'String': ['John Smith', 'Jane Doe', 'Alice Johnson']})\n",
+    "\n",
+    "# Extracting first and last names\n",
+    "df['first_name'] = df['String'].str.split(\" \", expand=True)[0]  # Extract first word\n",
+    "df['last_name'] = df['String'].str.split(\" \", expand=True)[1]  # Extract second word\n",
+    "df['title'] = df['String'].str.title()\n",
+    "\n",
+    "# Convert first name to uppercase and last name to lowercase\n",
+    "df['first_name'] = df['first_name'].str.upper() # Convert to uppercase\n",
+    "df['last_name'] = df['last_name'].str.lower()  # Convert to lowercase\n",
+    "\n",
+    "df"
+   ],
+   "id": "583978922b3205ea",
+   "outputs": [
+    {
      "data": {
       "text/plain": [
-       "0      3\n",
-       "1      1\n",
-       "2      1\n",
-       "3      1\n",
-       "4      3\n",
-       "      ..\n",
-       "239    1\n",
-       "240    3\n",
-       "241    1\n",
-       "242    1\n",
-       "243    3\n",
-       "Name: sex, Length: 244, dtype: int64"
+       "          String first_name last_name          title\n",
+       "0     John Smith       JOHN     smith     John Smith\n",
+       "1       Jane Doe       JANE       doe       Jane Doe\n",
+       "2  Alice Johnson      ALICE   johnson  Alice Johnson"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>String</th>\n",
+       "      <th>first_name</th>\n",
+       "      <th>last_name</th>\n",
+       "      <th>title</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>John Smith</td>\n",
+       "      <td>JOHN</td>\n",
+       "      <td>smith</td>\n",
+       "      <td>John Smith</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Jane Doe</td>\n",
+       "      <td>JANE</td>\n",
+       "      <td>doe</td>\n",
+       "      <td>Jane Doe</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Alice Johnson</td>\n",
+       "      <td>ALICE</td>\n",
+       "      <td>johnson</td>\n",
+       "      <td>Alice Johnson</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 11
+   "execution_count": 36
   }
  ],
  "metadata": {
