--- a/comparison.ipynb
+++ b/comparison.ipynb
@@ -13,8 +13,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-16T12:35:08.346579Z",
-     "start_time": "2025-07-16T12:35:08.210693Z"
+     "end_time": "2025-07-17T04:08:52.197965Z",
+     "start_time": "2025-07-17T04:08:52.082860Z"
     }
    },
    "cell_type": "code",
@@ -111,7 +111,7 @@
      ]
     }
    ],
-   "execution_count": 20
+   "execution_count": 42
   },
   {
    "metadata": {},
@@ -127,8 +127,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-16T13:18:48.837435Z",
-     "start_time": "2025-07-16T13:18:48.797977Z"
+     "end_time": "2025-07-17T04:08:52.296175Z",
+     "start_time": "2025-07-17T04:08:52.258016Z"
     }
    },
    "cell_type": "code",
@@ -208,12 +208,131 @@
        "</div>"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 36
+   "execution_count": 43
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "# Merging",
+   "id": "7cb88df00e0cfde2"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-07-17T09:42:40.756160Z",
+     "start_time": "2025-07-17T09:42:40.696816Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "df1 = pd.DataFrame({'key': ['A', 'B', 'C', 'D'], 'Value': np.random.randn(4)})\n",
+    "df2 = pd.DataFrame({'key': [ 'B', 'D', 'D', 'E'], 'Value': np.random.rand(4)})\n",
+    "\n",
+    "\n",
+    "inner_join = df1.merge(df2, on=['key'], how='inner')\n",
+    "outer_join = df1.merge(df2, on=['key'], how='outer')\n",
+    "left_join = df1.merge(df2, on=['key'], how='left')\n",
+    "right_join = df1.merge(df2, on=['key'], how='right')\n",
+    "\n",
+    "\n",
+    "left_join"
+   ],
+   "id": "7081924e38d3185a",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "  key   Value_x   Value_y\n",
+       "0   A -0.740090       NaN\n",
+       "1   B -1.603610  0.149624\n",
+       "2   C -0.165419       NaN\n",
+       "3   D -0.716529  0.200407\n",
+       "4   D -0.716529  0.735563"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>key</th>\n",
+       "      <th>Value_x</th>\n",
+       "      <th>Value_y</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>A</td>\n",
+       "      <td>-0.740090</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>B</td>\n",
+       "      <td>-1.603610</td>\n",
+       "      <td>0.149624</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>C</td>\n",
+       "      <td>-0.165419</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>D</td>\n",
+       "      <td>-0.716529</td>\n",
+       "      <td>0.200407</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>D</td>\n",
+       "      <td>-0.716529</td>\n",
+       "      <td>0.735563</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 76
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-07-17T08:19:26.098207Z",
+     "start_time": "2025-07-17T08:19:26.087Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "",
+   "id": "9e331f07b9ceb9e9",
+   "outputs": [],
+   "execution_count": null
   }
  ],
  "metadata": {
