feat: Enhance comparison notebook with examples for extracting words, merging data, and additional operations

--- a/comparison.ipynb
+++ b/comparison.ipynb
@@ -554,6 +554,171 @@
     }
    ],
    "execution_count": 17
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "# Pivot Tables\n",
+    "[PivotTables](https://support.microsoft.com/en-us/office/create-a-pivottable-to-analyze-worksheet-data-a9a84538-bfe9-40a9-a8e9-f99134456576) from spreadsheets can be replicated in pandas through [Reshaping and pivot tables](https://pandas.pydata.org/docs/getting_started/comparison/comparison_with_spreadsheets.html#other-considerations). Using the tips dataset again, let’s find the average gratuity by size of the party and sex of the server."
+   ],
+   "id": "7a7a1c7c8beb8ad5"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-07-18T09:45:45.813399Z",
+     "start_time": "2025-07-18T09:45:45.744941Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "tips = pd.read_csv('data/tips.csv')\n",
+    "\n",
+    "# pivot_table = pd.pivot_table(tips, values='tip', index=['size'], columns=['sex'], aggfunc=np.average)  # Create a pivot table with average / similar to PivotTable in Spreadsheets\n",
+    "\n",
+    "# or alternatively using pivot_table method\n",
+    "pivot = tips.pivot_table(values='tip', index=['size'], columns=['sex'], aggfunc=np.average)\n",
+    "\n",
+    "pivot"
+   ],
+   "id": "664ca1822c8ba899",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "sex     Female      Male\n",
+       "size                    \n",
+       "1     1.276667  1.920000\n",
+       "2     2.528448  2.614184\n",
+       "3     3.250000  3.476667\n",
+       "4     4.021111  4.172143\n",
+       "5     5.140000  3.750000\n",
+       "6     4.600000  5.850000"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>sex</th>\n",
+       "      <th>Female</th>\n",
+       "      <th>Male</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>size</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1.276667</td>\n",
+       "      <td>1.920000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2.528448</td>\n",
+       "      <td>2.614184</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3.250000</td>\n",
+       "      <td>3.476667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4.021111</td>\n",
+       "      <td>4.172143</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>5.140000</td>\n",
+       "      <td>3.750000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>4.600000</td>\n",
+       "      <td>5.850000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 28
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "# Find and Replace\n",
+    "[Excel’s Find dialog](https://support.microsoft.com/en-us/office/find-or-replace-text-and-numbers-on-a-worksheet-0e304ca5-ecef-4808-b90f-fdb42f892e90) takes you to cells that match, one by one. In pandas, this operation is generally done for an entire column or `DataFrame` at once through [conditional expressions](https://pandas.pydata.org/docs/getting_started/intro_tutorials/03_subset_data.html#min-tut-03-subset-rows-and-columns)."
+   ],
+   "id": "7c8840bb2d91abb7"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-07-18T10:34:49.037673Z",
+     "start_time": "2025-07-18T10:34:49.001359Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "tips = pd.read_csv('data/tips.csv')\n",
+    "\n",
+    "# tips == 'Sun' # Find all rows where 'day' is 'Sun' / similar to Find in Spreadsheets\n",
+    "# or\n",
+    "# tips['day'].str.contains('Sun')  # Find all rows where 'day' contains 'Sun' / similar to Find in Spreadsheets)\n",
+    "\n",
+    "tips.replace('Thur', 'Thursday', inplace=True)  # Replace 'Thu' with 'Thursday' in the 'day' column / similar to Replace All in Spreadsheets\n",
+    "\n",
+    "print(tips[tips['day'] == 'Thursday'])  # Display rows where 'day' is 'Thursday'"
+   ],
+   "id": "1fd2690a57b0cc0a",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     total_bill   tip     sex smoker       day    time  size\n",
+      "77        27.20  4.00    Male     No  Thursday   Lunch     4\n",
+      "78        22.76  3.00    Male     No  Thursday   Lunch     2\n",
+      "79        17.29  2.71    Male     No  Thursday   Lunch     2\n",
+      "80        19.44  3.00    Male    Yes  Thursday   Lunch     2\n",
+      "81        16.66  3.40    Male     No  Thursday   Lunch     2\n",
+      "..          ...   ...     ...    ...       ...     ...   ...\n",
+      "202       13.00  2.00  Female    Yes  Thursday   Lunch     2\n",
+      "203       16.40  2.50  Female    Yes  Thursday   Lunch     2\n",
+      "204       20.53  4.00    Male    Yes  Thursday   Lunch     4\n",
+      "205       16.47  3.23  Female    Yes  Thursday   Lunch     3\n",
+      "243       18.78  3.00  Female     No  Thursday  Dinner     2\n",
+      "\n",
+      "[62 rows x 7 columns]\n"
+     ]
+    }
+   ],
+   "execution_count": 36
   }
  ],
  "metadata": {
